--- a/_config.yml
+++ b/_config.yml
@@ -261,6 +261,7 @@ scholar:
 # -----------------------------------------------------------------------------
 
 jekyll-diagrams:
+    renderer: mermaid
     # configuration, see https://github.com/zhustec/jekyll-diagrams.
     # feel free to comment out this section if not using jekyll diagrams.
 
